<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLL">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView1Text"
        android:textSize="@dimen/textSize"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        />
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView2Text"
        android:textSize="@dimen/textSize"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"

        />
    <Button
        android:id="@+id/Red_Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Red_Green"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize"
        android:textColor="@color/GREEN"
        android:backgroundTint="@color/RED"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        android:onClick="toRedGreen"
        />
    <Button
        android:id="@+id/Yellow_Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Yellow_Blue"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize"
        android:textColor="@color/BLUE"
        android:backgroundTint="@color/YELLOW"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        android:onClick="toYellowBlue"
        />
    <Button
        android:id="@+id/Black_White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Black_White"
        android:textAllCaps="false"
        android:textSize="@dimen/textSize"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:padding="@dimen/padding"
        android:layout_margin="@dimen/margin"
        android:onClick="toBlackWhite"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Red"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:backgroundTint="@color/RED"
            android:onClick="toRed"
            android:padding="@dimen/padding"
            android:text="@string/red"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Blue"
            android:text="@string/blue"
            android:backgroundTint="@color/BLUE"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:onClick="toBlue"
            />
        <Button
            android:id="@+id/Black"
            android:text="@string/black"
            android:backgroundTint="@color/black"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/padding"
            android:onClick="toBlack"
            />
    </LinearLayout>
</LinearLayout>